# fastqe_rust_embed

./: Cargo.toml
.github/workflows/: rust.yml
src/: main.rs
