[package]
name = "fastqe"
version = "0.1.0"
authors = ["Andrew Lonsdale <andrew.lonsdale@lonsbio.com.au>"]
edition = "2021"

[lib]
crate-type = ["cdylib","lib"]
path = "src/main.rs"
link-args = ["-s", "ZLIB=1"]


[features]
default = ["freeze-stdlib"]
freeze-stdlib = ["rustpython-vm/freeze-stdlib", "rustpython-pylib/freeze-stdlib", "rustpython-stdlib"]
no-start-func = []



[dependencies]
bytecount = "0.6.3"
bio = "1.1.0"
argparse = "*"
log = "*"
getrandom = { version = "0.2", features = ["js","custom"] }
wasm-bindgen = { version = "*", workspace = true }
js-sys = "*"
emojis = "0.6.1"
clap = "4.4.10"
flate2 = "1.0"
rustpython-vm = { git = "https://github.com/RustPython/RustPython.git", version = "*", default-features = false ,workspace = true, features = ["compiler", "encodings", "serde", "wasmbind"]  }
rustpython-common = { workspace = true }
rustpython-pylib = { workspace = true, optional = true }
rustpython-stdlib = { workspace = true, default-features = false, optional = true }
# make sure no threading! otherwise wasm build will fail
rustpython-parser = { workspace = true }

serde = { workspace = true }

console_error_panic_hook = "0.1"
serde-wasm-bindgen = "0.3.1"
wasm-bindgen-futures = "0.4"

[dependencies.web-sys]
version = "0.3.4"
features = [
  'Document',
  'Element',
  'HtmlElement',
  'Node',
  'Window',
  'console'
]
