[package]
name = "rustpython_wasm"
description = "A Python-3 (CPython >= 3.5.0) Interpreter written in Rust, compiled to WASM"

[lib]
crate-type = ["cdylib", "rlib"]
path = src/lib.rs"
link-args = ["-s", "ZLIB=1"]


[features]
default = ["freeze-stdlib"]
freeze-stdlib = ["rustpython-vm/freeze-stdlib", "rustpython-pylib/freeze-stdlib", "rustpython-stdlib"]
no-start-func = []

[dependencies]
rustpython-common =  "*"
rustpython-pylib = { version = "*", optional = true }
rustpython-stdlib = { version = "*", default-features = false, optional = true }
# make sure no threading! otherwise wasm build will fail
rustpython-vm = { version = "*",features = ["compiler", "encodings", "serde", "wasmbind"] }

rustpython-parser = "*"
serde = { version = "1.0.133", default-features = false }
wasm-bindgen = "0.2.92"


console_error_panic_hook = "0.1"
js-sys = "0.3"
serde-wasm-bindgen = "0.3.1"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = [
    "console",
    "Document",
    "Element",
    "Window",
    "Headers",
    "Request",
    "RequestInit",
    "Response"
] }

[package.metadata.wasm-pack.profile.release]
wasm-opt = false#["-O1"]

